--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -51,6 +51,10 @@ header{
 .lg-icon{
   font-size: 3em;
 }
+
+.white-txt{
+  color: white;
+}
 .project-container{
   border-radius: 8px;
   border: 0.2em solid #30ABE8;
@@ -192,8 +196,12 @@ header{
 
 
 
-.active-nav{
+/* .active-nav{
   filter: drop-shadow(2px 3px 10px white);
+} */
+
+.active-nav{
+  filter: drop-shadow(5px 7px 9px white);
 }
 
 
@@ -369,9 +377,20 @@ display: flex; justify-content: flex-end
 @media (max-width: 860px){
   main{
     font-size: 11.4pt;
-   
-    padding: 0em 0em 0em 0em;
+    padding: 0em 0em 8em 0em;
   }
+  .content-container{
+    /* background-image: linear-gradient( rgba(0,  90, 156, 0.6), rgba(0,  90, 156, 0.6) ), url("https://aayush6194.github.io/static/step2-dcde152e7c0e526d44568376d83d6733.svg");
+    background-size: 100% 100%; */
+  }
+
+  .svg-glow{
+    width: 98%;
+    height: auto;
+    min-height: 300px;
+    /* display: none; */
+  }
+
   .bt {
     padding: 0.65em 0.4em;
     margin: 0.1em;
@@ -380,7 +399,29 @@ display: flex; justify-content: flex-end
         height: 95vh;
   }
 }
+@media(max-Height: 820px) {
+  .nav.align-left-on-lg, .content-container{
+    margin: 0 auto;
+  }
 
+
+  .content-container{
+    border-left: 0.25em solid #30ABE8;
+  }
+  .main-grid{
+    grid-template-rows: 10em 1fr auto;
+    height: 100%;
+  }
+  .bt {
+    padding: 0.65em 1em;
+  }
+  .bt-round-white{
+    padding: 0.65em 0.72em;
+  }
+  .md-icon{
+    font-size: 1em;
+  }
+}
 @media (max-width: 761px){
   main, .text{
     font-size: 11.8pt;
@@ -435,36 +476,6 @@ h1{
         font-size: 0.99em;
   }
 }
-@media(max-Height: 820px) {
-  .nav.align-left-on-lg, .content-container{
-    margin: 0 auto;
-  }
-  .content-container{
-    border-left: 0.25em solid #30ABE8;
-  }
-  .main-grid{
-    grid-template-rows: 10em 1fr auto;
-    height: 100%;
-  }
-  .bt {
-    padding: 0.65em 1em;
-  }
-  .bt-round-white{
-    padding: 0.65em 0.72em;
-  }
-  .md-icon{
-    font-size: 1em;
-  }
-}
-
-@media (max-Height: 680px){
- main{
-     font-size: 11.5pt;
- }
-
- 
-}
-
 
 .particle{
   animation: animate;
