added context api and modal

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -36,18 +36,6 @@ header{
    place-items: center;
  }
 
-/* body:after {
-   content: "";
-   display: block;
-   position: fixed;
-   top: 0;
-   left: 0;
-   height: 100%;
-   width: 100%;
-   z-index: 2;
-   background:#215571;
-   opacity: 0.9;
- } */
 .lg-icon{
   font-size: 3em;
 }
@@ -60,8 +48,11 @@ header{
   border: 0.2em solid #30ABE8;
   margin-bottom: 2em;
   padding: 2px;
- 
   box-shadow:  1px 3px 10px rgba(0, 0, 0, 0.27), 1px 2px 10px rgba(0, 0, 0, 0.06) inset;
+}
+
+.shadow{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .hide{
@@ -147,6 +138,7 @@ header{
 }
 
 .bt-round-white{
+  box-shadow: 0 7px 10px rgba(0,0,0,0.25), 0 6px 6px rgba(0,0,0,0.22);
   border: 0.15em solid white;
   font-weight: bold;
   padding: 0.58em 0.72em;
@@ -165,7 +157,8 @@ header{
 .bt-round-white:hover{
   background: white;
   color: #30ABE8;
-  transform: translateY(-0.2em);
+  box-shadow: 0 0 0 0;
+  transform: translateY(-0.15em);
 
 }
 
@@ -175,6 +168,7 @@ header{
   color: white;
   font-size: 1.2em;
   font-weight: 200;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.25), 0 3px 3px rgba(0,0,0,0.22);
   margin: 0.15em;
   border: 2px solid #30ABE8;
 }
@@ -183,8 +177,12 @@ header{
 .bt-custom:hover {
   background: white;
   color: #30ABE8;
-  transform: translateY(-0.4em);
+  box-shadow: 0 0 0 0;
   transition: 350ms ease-out;
+}
+
+.lift:hover{
+  transform: translateY(-0.4em);
 }
 
 .dark-btn{
@@ -198,19 +196,12 @@ header{
   color: black;
 }
 
-
-
-/* .active-nav{
-  filter: drop-shadow(2px 3px 10px white);
-} */
-
 .active-nav{
   filter: drop-shadow(5px 7px 9px white);
 }
 
 
 .content-container {
- /* grid-column: 2/-1; */
  grid-auto-columns: 1fr 1fr;
   color: #2a3eb1;
 
@@ -383,10 +374,6 @@ display: flex; justify-content: flex-end
     font-size: 11.4pt;
     padding: 0em 0em 8em 0em;
   }
-  .content-container{
-    /* background-image: linear-gradient( rgba(0,  90, 156, 0.6), rgba(0,  90, 156, 0.6) ), url("https://aayush6194.github.io/static/step2-dcde152e7c0e526d44568376d83d6733.svg");
-    background-size: 100% 100%; */
-  }
 
   .svg-glow{
     width: 98%;
@@ -407,7 +394,6 @@ display: flex; justify-content: flex-end
   .nav.align-left-on-lg, .content-container{
     margin: 0 auto;
   }
-
 
   .content-container{
     border-left: 0.25em solid #30ABE8;
