--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 body,html{
-  font : 14pt 'Montserrat', sans-serif;
+  font : 11pt 'Montserrat', sans-serif;
   margin:0 auto;
   padding: 0px;
   cursor: url(https://scontent.fmem1-2.fna.fbcdn.net/v/t1.15752-9/54432566_404918990334641_7096942748036497408_n.png?_nc_cat=107&_nc_ht=scontent.fmem1-2.fna&oh=ef648dd9d6edc8f65d551298df299adc&oe=5D0AADEC), auto;
@@ -24,7 +24,7 @@ header{
  main{
   position: relative;
    z-index: 3;
-   max-width: 2000px;
+   max-width: 1500px;
    margin: 0 auto;
   padding: 0em 0em 0em 5em;
   box-sizing: border-box;
@@ -44,11 +44,16 @@ header{
   color: white;
 }
 .project-container{
+  max-width: 1200px;
+  margin: auto;
   border-radius: 8px;
   border: 0.2em solid #30ABE8;
   margin-bottom: 2em;
   padding: 2px;
   box-shadow:  1px 3px 10px rgba(0, 0, 0, 0.27), 1px 2px 10px rgba(0, 0, 0, 0.06) inset;
+}
+.active-item{
+  transform: scale(1.1);
 }
 
 .shadow{
@@ -65,9 +70,7 @@ header{
 }
 
 .container{
-   height: 95vh;
-   min-height: 650px;
-   width: 100%;
+   min-height: 95vh;
    align-items: start;
    align-content: start;
    align-items: stretch;
@@ -130,7 +133,9 @@ header{
 .main-grid{
   display: grid;
   grid-template-rows: auto 1fr auto;
-  width: 100%;
+  width: 95%;
+  margin: auto;
+  max-width: 1600px;
   }
 
   .blue{
@@ -214,7 +219,12 @@ header{
 .content-container {
  grid-auto-columns: 1fr 1fr;
   color: #2a3eb1;
+}
 
+.container2{
+  max-width: 1600px;
+  width: 95%;
+  margin: auto;
 }
 
 .footer {
@@ -432,7 +442,7 @@ display: flex; justify-content: flex-end
     margin: 0.1em;
   }
   .container{
-        height: 95vh;
+        min-height: 95vh;
   }
 }
 @media(max-Height: 820px) {
