--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -150,6 +150,7 @@ header{
   font-size: 1.1em;
   min-width: 6.5em;
   vertical-align: middle;
+  cursor: pointer;
 }
 
 .bt-round-white{
@@ -159,7 +160,7 @@ header{
   padding: 0.58em 0.72em;
   line-height: 168%;
   border-radius: 50px;
-  background: #30ABE8;
+  background: #2ca2ad;
   color: white;
   font-weight: bold;
   margin-right: 0.15em;
@@ -171,7 +172,7 @@ header{
 
 .bt-round-white:hover{
   background: white;
-  color: #30ABE8;
+  color: #2ca2ad;
   box-shadow: 0 0 0 0;
   transform: translateY(-0.15em);
 
@@ -179,19 +180,19 @@ header{
 
 .bt-custom {
   border-radius: 5px;
-  background:  #30ABE8;
+  background:  #2ca2ad;
   color: white;
   font-size: 1.2em;
   font-weight: 200;
   box-shadow: 0 2px 6px rgba(0,0,0,0.25), 0 3px 3px rgba(0,0,0,0.22);
   margin: 0.15em;
-  border: 2px solid #30ABE8;
+  border: 2px solid #2ca2ad;
 }
 
 
 .bt-custom:hover {
   background: white;
-  color: #30ABE8;
+  color: #2ca2ad;
   box-shadow: 0 0 0 0;
   transition: 350ms ease-out;
 }
@@ -212,13 +213,15 @@ header{
 }
 
 .active-nav{
-  filter: drop-shadow(5px 7px 9px white);
+ 
+
+  filter: drop-shadow(2px 3px 6px white);
 }
 
 
 .content-container {
  grid-auto-columns: 1fr 1fr;
-  color: #2a3eb1;
+  color: #2ca2ad;
 }
 
 .container2{
@@ -236,12 +239,13 @@ header{
 
 .content-container{
   margin-top: 2em;
-  border-left: 0.25em solid #30ABE8;
+  border-left: 0.25em solid #2ca2ad;
   padding: 1em 0;
   padding-left: 2em;
   color: white;
   display: grid;
   place-items: center;
+  background: rgba(0, 0, 0, 0.2);
   font-size: 1.2em;
 }
 
